--- a/auth-frontend/src/App.css
+++ b/auth-frontend/src/App.css
@@ -1,82 +1,90 @@
 .container {
-    display: grid;
-    align-items: center;
-    justify-items: center;
-    padding: 18px;
-    gap: 32px;
+  display: grid;
+  align-items: center;
+  justify-items: center;
+  padding: 18px;
+  gap: 16px;
 }
 
 .container img {
-    justify-self: flex-start;
+  justify-self: flex-start;
 }
 
 .container__heading {
-    font-size: 18px;
-    font-weight: 600;
-    line-height: 24px;
-    color: #333333;
+  font-size: 18px;
+  font-weight: 600;
+  line-height: 24px;
+  color: #333333;
 }
 
 .container__description {
-    font-size: 16px;
-    line-height: 22px;
-    color: #333;
+  font-size: 16px;
+  line-height: 22px;
+  color: #333;
 }
 
 .form {
-    display: grid;
-    gap: 16px;
-    width: 100%;
+  display: grid;
+  gap: 16px;
+  width: 100%;
 }
 
 .form__button {
-    width: 100%;
-    height: 38px;
-    border: none;
-    border-radius: 8px;
-    background-color: var(--button-background-color, #06d6a0);
-    color: var(--button-text-color, #fff);
-    font-size: 16px;
-    font-weight: 600;
-    line-height: 22px;
-    cursor: pointer;
-    transition: background-color 0.3s ease;
+  width: 100%;
+  height: 38px;
+  border: none;
+  border-radius: 8px;
+  background-color: var(--button-background-color, #06d6a0);
+  color: var(--button-text-color, #fff);
+  font-size: 16px;
+  font-weight: 600;
+  line-height: 22px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
 }
 
 .container__social-text {
-    font-size: 14px;
-    line-height: 20px;
-    color: var(--textfield-text-color, #06d6a0);
+  font-size: 14px;
+  line-height: 20px;
+  color: var(--textfield-text-color, #06d6a0);
 }
 
 .container__social-buttons {
-    display: flex;
-    gap: 18px;
+  display: flex;
+  gap: 18px;
 }
 
 .container__social-button {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    width: 42px;
-    height: 42px;
-    border: none;
-    background-color: transparent;
-    color: var(--icons-color, #06d6a0);
-    transition: background-color 0.3s ease;
-    cursor: pointer;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 42px;
+  height: 42px;
+  border: none;
+  background-color: transparent;
+  color: var(--icons-color, #06d6a0);
+  transition: background-color 0.3s ease;
+  cursor: pointer;
 }
 
 .container__social-text a {
-    text-decoration: none;
-    color: #2D9CDB;
+  text-decoration: none;
+  color: #2d9cdb;
+}
+
+.dark {
+  color: var(--light-background);
+}
+
+.light {
+  color: var(--dark-background);
 }
 
 @media screen and (min-width: 768px) {
-    .container {
-        max-width: 470px;
-        padding: 3.6rem;
-        border-radius: 24px;
-        border: 1px solid var(--border-color, #BDBDBD);
-    }
+  .container {
+    max-width: 470px;
+    padding: 3.6rem;
+    border-radius: 24px;
+    border: 1px solid var(--border-color, #bdbdbd);
+  }
 }
