Fix (FormInput): Resolved issue where the label did not stay above the input when the user entered a value in the form.

--- a/auth-frontend/src/components/FormInput/FormInput.css
+++ b/auth-frontend/src/components/FormInput/FormInput.css
@@ -46,6 +46,11 @@
   padding: 0 4px;
 }
 
+.form-group__label--filled {
+  transform: translate(-40px, -36px) scale(0.8);
+  padding: 0 4px;
+}
+
 .form-group__error {
   position: relative;
   font-size: 12px;
