--- a/auth-frontend/src/App.css
+++ b/auth-frontend/src/App.css
@@ -73,11 +73,11 @@
 }
 
 .dark {
-  color: var(--light-background);
+  color: var(--light-background) !important;
 }
 
 .light {
-  color: var(--dark-background);
+  color: var(--dark-background) !important;
 }
 
 @media screen and (min-width: 768px) {
