--- a/auth-frontend/src/index.css
+++ b/auth-frontend/src/index.css
@@ -5,6 +5,7 @@
   --light-background: #f5f5f5;
   --dark-background: #212121;
   --border-color: #bdbdbd;
+  --border-color-light: #e0e0e0;
   --icons-color: #828282;
   --textfield-text-color: #828282;
   --button-background-color: #2f80ed;
@@ -27,11 +28,11 @@
   outline: none;
 }
 
-html {
+#root {
   display: grid;
   place-items: center;
   align-content: center;
-  height: 100%;
+  min-height: 100vh;
 }
 
 @media (prefers-color-scheme: dark) {
