--- a/auth-frontend/src/components/Navbar/Navbar.css
+++ b/auth-frontend/src/components/Navbar/Navbar.css
@@ -4,6 +4,8 @@
     align-items: center;
     /* background-color: #ffffff; */
     padding: 16px;
+    backdrop-filter: blur(4px);
+    -webkit-backdrop-filter: blur(4px);
     /* box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); */
 
     position: sticky;
