Add (Login, SignUp): Add call to the api functionality.

--- a/auth-frontend/src/App.css
+++ b/auth-frontend/src/App.css
@@ -43,6 +43,14 @@
   transition: background-color 0.3s ease;
 }
 
+.container__error-message {
+  font-size: 12px;
+  line-height: 20px;
+  color: #eb5757;
+  justify-self: flex-start;
+  font-style: italic;
+}
+
 .container__social-text {
   font-size: 14px;
   line-height: 20px;
