--- a/auth-frontend/src/pages/EditInfo/EditInfo.css
+++ b/auth-frontend/src/pages/EditInfo/EditInfo.css
@@ -50,7 +50,7 @@
     }
 
     .edit-container {
-        max-width: 55%;
+        max-width: 55% !important;
     }
 
     .edit-info__back-container {
