Feat (UserContext): Add user context to access user information from private routes.

--- a/auth-frontend/src/components/Profile/Profile.css
+++ b/auth-frontend/src/components/Profile/Profile.css
@@ -11,6 +11,10 @@
     align-items: center;
 }
 
+.profile div:last-child {
+    border-bottom: none;
+}
+
 .profile div h3 {
     font-size: 13px;
     font-weight: 500;
